# 10MinutePhysicsPY

./: .gitignore  README.md  pyproject.toml
01-cannonball2d/: README.md  cannonball2dPt1.py  cannonball2dPt2.py  cannonball2dPt3.py  cannonball2dRK4.py  pyproject.toml
02-cannonball3d/: 02-Cannonball3D.py  README.md  Scene.qml  pyproject.toml
03-ballcollisions2d/: README.md  UI.qml  billiardPt1.py  billiardPt2.py  billiardPt3.py  billiardQML.py  pyproject.toml
04-pinball/: README.md  pinball.py  pyproject.toml
05-beads/: Bead.ui  ManyBead.ui  bead.py  many_beads.py  pyproject.toml
06-pendulum/: pyproject.toml
ballcollision2d/: LabeledRangeSlider.qml  LabeledSlider.qml  Part2UI.ui  README.md  UI.qml  billiardPt1.py  billiardPt2.py  billiardPt3.py  billiardQML.py  pyproject.toml
ballcollision2d/.ropeproject/: autoimport.db
beads/: pyproject.toml
cannonball2d/: README.md  cannonball2dPt1.py  cannonball2dPt2.py  cannonball2dPt3.py  cannonball2dRK4.py  pyproject.toml
pinball/: pinball.py
