[project]
name = "10MinutePhysicsDemos"
version = "0.1.0"
description = "My version of the 10 minute physics demos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["nccapy>=0.1.7", "pyside6>=6.9.0"]

[tool.uv.workspace]
members = [
    "01-cannonball2d",
    "03-ballcollision2d",
    "04-pinball",
    "05-beads",
    "06-pendulum",
    "02-cannonball3d",
]

exclude = ["pages"]
